# labs

./: README.md
prj.labs/: CMakeLists.txt
prj.labs/CourseWork/: 23.12 gen_model.json  CMakeLists.txt  Coursach.cpp  utilities.py
prj.labs/DynamicArray/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  DynamicArray_test.cpp
prj.labs/QueueOnList/: CMakeLists.txt  QueueOnList.h  QueueOnList.hpp  QueueOnList_test.cpp
prj.labs/StackOnArray/: CMakeLists.txt  StackOnArray.cpp
prj.labs/StackOnList/: CMakeLists.txt  StackOnList.h  StackOnList.hpp  StackOnList_test.cpp
prj.labs/complex/: complex.cpp
prj.labs/matrix/: CMakeLists.txt  matrix.cpp
prj.labs/rational/: CMakeLists.txt  rational.cpp  rational.h  rational_test.cpp
